tests/fixtures/invalid/bytes_lshift_int.py
# Cannot left shift Bytes and Int
x: bytes = b"hello" << 1
